# pepkio-mendelian-cross-solver

./: .zenodo.json  Dockerfile  README.md  README_DOCKERHUB.md  README_PYPI.md  pyproject.toml
src/pepkio_mendelian_cross_solver/: __init__.py  cli.py  client.py  config.py
tests/: conftest.py  test_client.py  test_integration.py
