[project]
name = "pepkio-mendelian-cross-solver"
version = "0.1.0"
description = "Python client for Mendelian cross / Punnett square solving via the Pepkio API"
readme = "README_PYPI.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.scripts]
pepkio-mendelian-cross-solver = "pepkio_mendelian_cross_solver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pepkio_mendelian_cross_solver"]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
